<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<ImageView android:id="@+id/photo" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:src="@drawable/icon" />
				<LinearLayout android:orientation="horizontal"
				android:id="@+id/username_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/username" android:textStyle="bold"
					android:ems="6" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="5px" />
				<TextView android:id="@+id/username" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
					</LinearLayout>
							<LinearLayout android:orientation="horizontal"
				android:id="@+id/name_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/name" android:textStyle="bold"
					android:ems="6" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="5px" />
				<TextView android:id="@+id/name" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
					</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:id="@+id/location_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/location"
					android:textStyle="bold" android:ems="6" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="5px" />
				<TextView android:id="@+id/location" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
						<LinearLayout android:orientation="horizontal"
				android:id="@+id/age_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/age"
					android:layout_marginLeft="5px" android:textStyle="bold"
					android:layout_width="wrap_content" android:ems="6"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/age"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
					</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:id="@+id/sex_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/sex" android:textStyle="bold"
					android:ems="6" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginLeft="5px" />
				<TextView android:id="@+id/sex" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:id="@+id/about_me_layout" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:text="@string/about_me"
					android:layout_marginLeft="5px" android:textStyle="bold"
					android:layout_width="wrap_content" android:ems="6"
					android:layout_height="wrap_content" />
				<TextView android:id="@+id/about_me" android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
			android:id="@+id/edit_profile_layout" android:visibility="gone"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<Button android:id="@+id/edit_profile_button" android:text="@string/edit_profile"
			android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</FrameLayout>
